2_gke_test/mysql-master.yaml
#クラスタ内でMasterをmysql-masterで名前解決できるようにServiceを定義
apiVersion: v1
kind: Service
metadata:
  name: mysql-master
  labels:
    app: mysql-master
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None
  selector:
    app: mysql-master
