2_gke_test/todo-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoweb
  labels:
    app: todoweb
spec:
  selector:
    app: todoweb
  ports:
    - name: http
      port: 80
  type: NodePort #クラスタの外部にサービスを公開できる

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoweb
  labels:
    name: todoweb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todoweb
  template:
    metadata:
      labels:
        app: todoweb
    spec:
      volumes: #静的ファイルは、Nginxから直接レスポンスするため、永続化するためのvolumes使用
      - name: assets
        emptyDir: {} #Podごとに仮想Volume作成。Podと同時に削除される。最初は空
      containers:
      - name: nginx
        image: gihyodocker/nginx-nuxt:latest
        imagePullPolicy: Always #Podが開始されるたびにimageがpullされる
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/_nuxt
          name: assets

      - name: web
        image: gihyodocker/todoweb:latest
        imagePullPolicy: Always
        lifecycle: #Dockerfileを変えずに、コマンドを実行できるオプション
          postStart: #webコンテナ開始時
            exec:
              command:
              - cp
              - -R
              - /todoweb/.nuxt/dist
              - /
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /dist
          name: assets
